--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
         <i id="buyutec" class="fa-solid fa-magnifying-glass"></i>
         <i class="fa-solid fa-bell notifications fa-2x"></i>
         <img class="avatar" src="https://picsum.photos/50" />
-      </div>
+      <!---hamburger menu uzerine gelince gorunur olmasini nasil yapariz?-->
+      <i class="fa-solid fa-bars fa-2xl nav-menu"></i>
+    </div>
     </header>
     <main class="hero">
       <div class="main-movie">
+        <img alt="" src="https://image.tmdb.org/t/p/w300/sh7Rg8Er3tFcN9BpKIPOMvALgZd.jpg" />
         <h2>Movie Name</h2>
         <div class="movie-info">
           <span class="user-rating"
@@ -56,7 +59,210 @@
         <button><i class="fa-solid fa-play"></i> Play Now</button>
       </div>
     </main>
-    <section class="suggestion"></section>
-    <footer></footer>
+    <section class="suggestion">
+      <!-- 7 tane movie card olsun. scroll ile sağa-sola kaysın???-->
+      <div class="suggestion-row">
+        <div class="suggestion-row-title">
+          <h3>Popular Movies</h3>
+          <a href="#">View All</a>
+        </div>
+        <div class="suggestion-movies">
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/iADOJ8Zymht2JPMoy3R7xceZprc.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/mztdt3y6GBsJR69zHtszFezTCLT.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/vlHJfLsduZiILN8eYdN57kHZTcQ.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/bcM2Tl5HlsvPBnL8DKP9Ie6vU4r.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/1pdfLvkbY9ohJlCjQH2CZjjYVvJ.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/z1p34vh7dEOnLDmyCrlUVLuoDzd.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/tSz1qsmSJon0rqjHBxXZmrotuse.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="suggestion-row">
+        <div class="suggestion-row-title">
+          <h3>Recommended for You</h3>
+          <a href="#">View All</a>
+        </div>
+        <div class="suggestion-movies">
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/uGyiewQnDHPuiHN9V4k2t9QBPnh.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/8FHthx4Vu81J4X5BTLhJYK9Gtbs.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/gAEUXC37vl1SnM7PXsHTF23I2vq.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/iADOJ8Zymht2JPMoy3R7xceZprc.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/sh7Rg8Er3tFcN9BpKIPOMvALgZd.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/mztdt3y6GBsJR69zHtszFezTCLT.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+          <div class="movie-card">
+            <div class="movie-detail-container">
+              <h4>Movie</h4>
+              <div class="movie-info">
+                <img alt="" src="https://image.tmdb.org/t/p/w300/vlHJfLsduZiILN8eYdN57kHZTcQ.jpg" />
+                <span class="content-rating">16+</span
+                ><span class="movie-duration">2 h 21 min</span>
+              </div>
+              <button><i class="fa-solid fa-play"></i> Play Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer-navigation">
+        <nav>
+          <a href="">Terms of Use</a>
+          <a href="">Privacy Policy</a>
+          <a href="">FAQ</a>
+          <a href="">Watch List</a>
+        </nav>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab totam
+          repellat mollitia placeat saepe ipsa provident ut, molestiae eaque
+          eligendi culpa similique non earum assumenda? Iste quisquam
+          necessitatibus maxime sequi optio, cupiditate non voluptatibus dolor
+          hic quidem, architecto, recusandae veritatis?
+        </p>
+      </div>
+      <div class="social-navigation">
+        <h5>Follow Us</h5>
+        <div>
+          <i class="fa-brands fa-square-facebook fa-2x"></i>
+          <i class="fa-brands fa-square-x-twitter fa-2x"></i>
+          <i class="fa-brands fa-youtube fa-2x"></i>
+        </div>
+      </div>
+      <div class="mobile-app-navigation">
+        <h5>Apps</h5>
+        <div>
+          <img src="./assets/appStore.png" />
+          <img src="./assets/googlePlay.png" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
